Added required jar libraries